// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebpackBundleSizeAnalyzerPlugin should work when an absolute filepath is passed in 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "/absolute/report.txt",
  "statsOptions": Object {},
}
`;

exports[`WebpackBundleSizeAnalyzerPlugin should work when both args are passed in 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "./report.txt",
  "statsOptions": Object {
    "warnings": false,
  },
}
`;

exports[`WebpackBundleSizeAnalyzerPlugin should work when no values passed in 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "",
  "statsOptions": Object {},
}
`;

exports[`WebpackBundleSizeAnalyzerPlugin should work when only a filepath is passed in 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "./report.txt",
  "statsOptions": Object {},
}
`;
